--- a/jobsnatch2/templates/addin.html
+++ b/jobsnatch2/templates/addin.html
@@ -88,7 +88,7 @@ body {margin:0;font-family:Arial}
   table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 70%;
+    width: 60%;
   }
   
   td, th {
@@ -169,7 +169,7 @@ body {margin:0;font-family:Arial}
        border-radius:5px;
   }
 </style>
-<body style="background-image: linear-gradient( rgb(198, 201, 202),rgb(50, 147, 166));background-repeat:no-repeat">
+<body style="background-image: linear-gradient( rgb(198, 201, 202),rgb(50, 147, 166));background-repeat:no-repeat;">
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="{% url 'admin'%}">Dashboard</a>
@@ -177,7 +177,7 @@ body {margin:0;font-family:Arial}
     <a href="{% url 'admincom'%}">Company</a>
     <a href="{% url 'addcate'%}">Add Category</a>
   </div>
-  <div id="main" style="height: 1000px;">
+  <div id="main" style="height:fit-content;">
   
   
     <script>
@@ -216,7 +216,7 @@ body {margin:0;font-family:Arial}
       }
       </script>
       <center>
-       <div style="margin-top:5%;background-color:rgba(255, 255, 255, 0.373);align-items:center;width:50%;padding:3%;border-radius:10px;">
+       <div style="margin-top:5%;background-color:rgba(255, 255, 255, 0.373);align-items:center;width:70%;padding:3%;border-radius:10px;">
         <h2>Add New Internships</h2><br>
         <table>
         <form action="{% url 'intern' %}" method="POST" enctype="multipart/form-data">
@@ -251,6 +251,26 @@ body {margin:0;font-family:Arial}
               <td><input type="date" placeholder="Enddate" name="edate" class="ab"></td>
             </tr>
             <tr>
+                <td><label for="loc">Location : </label></td>
+                <td><input type="text" name="loc" class="ab"></td>
+            </tr>
+            <tr>
+            <tr>
+                <td><label for="ofon">Online/Offline : </label></td>
+                <td><input type="text" name="ofon" class="ab"></td>
+            </tr>
+            <tr>
+                <td><label for="ab">About : </label></td>
+                <td><textarea name="ab" id="" cols="40" rows="5"></textarea></td>
+            </tr>
+            <tr>
+                <td><label for="stip">Stipend : </label></td>
+                <td><input type="number" name="stip" class="ab"></td>
+            </tr>
+            <tr>
+                <td><label for="wca">Who can Apply : </label></td>
+                <td><textarea name="wca" id="" cols="40" rows="5"></textarea></td>
+            </tr>
               <td><label for="pp" style="background-color: rgb(35, 157, 214);height:20%;padding:1.5%;border-radius:5px;float:left;padding:5%;"> Add Image</label>
               <input type="file"  accept="image/png, image/jpeg" name="p" id="pp" hidden></td>
               <td><input type="submit" value="Submit" style="border-radius: 5px;background-color:#07cb83;border:none;padding:1.3%;float:right;padding:4%;"></td>
