--- a/jobsnatch2/templates/avljobs.html
+++ b/jobsnatch2/templates/avljobs.html
@@ -5,18 +5,14 @@
   table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 70%;
+    width: 150%;
   }
   
   td, th {
-    border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
   }
   
-  tr:nth-child(even) {
-    background-color: #ffffff;
-  }
   </style>
 <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));background-repeat:no-repeat">
 <h1 style="color: black; text-align:center">Hi {{user.username}}, The jobs available as per your preferecs are :</h1><br><br>
@@ -79,12 +75,26 @@
            <img src="{{i.image.url}}" alt="..."width=100px height="100px" style="margin-top: 40%;margin-left:3%;border-radius:10px;">
           {% endif %}
          </div>
-          <div style="padding: 10%; margin-left:10%;margin-top:-30%;width:40%;text-align:left;">
-            <h2 style="margin-top:15%">{{ i.username}}</h2>
-            <h4>Job Title : {{ i.job_title}}</h4>
-            <h4>Last Date : {{ i.lastdate }}</h4></p>
-            <h4>Location : {{ i.loc }}</h4>
-            <h4>Destination : {{ i.desti }}</h4></p>
+          <div style="padding: 6%; margin-left:10%;margin-top:-30%;width:40%;text-align:left;">
+            
+            <table>
+              <tr>
+                <td><h2 style="margin-top:15%">{{ i.username}}</h2></td> 
+                <td></td> 
+              </tr>
+              <tr>
+                <td><h4>Job Title : {{ i.job_title}}</h4></td> 
+                <td><h4>Qualification : {{ i.qualification }}</h4></p></td> 
+              </tr>
+              <tr>
+               <td><h4>Last Date : {{ i.lastdate }}</h4></p></td>
+               <td><h4>Location : {{ i.loc }}</h4></td>
+             </tr>
+             <tr>
+              <td><h4>Destination : {{ i.desti }}</h4></p></td>
+              <td><h4>Job-Type : {{ i.jobtype }}</h4></p></td>
+            </tr>
+          </table>
           </div>
           <div style="padding: 10%; margin-left:75%;margin-top:-29%;width:70%;">
             <button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:80px;font-weight:bold;color:white;border:none" type="submit" id="try2">View More</button>
