--- a/jobsnatch2/templates/classdetails.html
+++ b/jobsnatch2/templates/classdetails.html
@@ -32,9 +32,9 @@
                         {% csrf_token %}
                         <br><br>
                         <label for="uname">Name : </label>
-                        <input type="text" value="{{can}}" name="uname" style="border-radius:7px;margin-left:6%; border:none;text-align:center;width:fit-content;"><br><br>
+                        <input type="text" value="{{can}}" name="uname" style="border-radius:7px;margin-left:6%; border:none;text-align:center;width:fit-content;" disabled><br><br>
                         <label for="ititle">Course : </label>
-                        <input type="text"  name="ititle" value="{{inter}}" style="border-radius:7px;margin-left:6%;border:none;text-align:center;width:fit-content;"><br><br>
+                        <input type="text"  name="ititle" value="{{inter}}" style="border-radius:7px;margin-left:6%;border:none;text-align:center;width:fit-content;" disabled><br><br>
                         <label for="pday">Day : </label>
                         <input type="date" placeholder="Prefered day" name="pday" style="border-radius:7px;margin-left:6%;border:none;text-align:center;" required>
                         <br><br>
