--- a/jobsnatch2/templates/company.html
+++ b/jobsnatch2/templates/company.html
@@ -191,6 +191,7 @@
       <a href="{% url 'avlcandidates'%}">Available Candidates</a>
       <a href="{% url 'acceptedcan'%}">Accepted Candidates</a>
       <a href="{% url 'compoffer'%}">Candidates</a>
+      <a href="{% url 'inadd'%}">Add Internship</a>
       <div class="dropdown">
           <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
       </div> 
