--- a/jobsnatch2/templates/index.html
+++ b/jobsnatch2/templates/index.html
@@ -179,7 +179,7 @@ color:white
  <div class="homebody">
   <div class="header" id="myHeader">
     <a href="#default" class="logo">JobSnatch</a>
-    <div id="google_element" class="header-right">
+    <div  class="header-right">
       <a class="active" href="#home">Home</a>
       <a href="#cat">Categories</a>
       <a href="#blo">Blog</a>
@@ -188,8 +188,7 @@ color:white
       <a href="{% url 'feedbacks' %}">Feedbacks</a>
       <a href="#cati">Internships</a>
       <a href="{% url 'map' %}">Map</a>
-      <a href="{% url 'res' %}">Resumes</a>
-      <a href="{% url 'resdetails' %}">Resdetails</a>
+      
       <!-- <a href="{% url 'register' %}" style="width:auto; color:white">Register</a> -->
       <a href="{% url 'login' %}" style="width:auto; color:white">Login</a>
       <!-- <script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
@@ -199,6 +198,7 @@ color:white
                                 }
                             </script> -->
     </div>
+    <!-- <div id="google_element"></div> -->
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -457,10 +457,11 @@ color:white
           </div>
           </footer>
         </div>
+
         <script type="text/javascript">
           (function(d, m){
               var kommunicateSettings = 
-                  {"appId":"f36d48ad3e0d9f09a4d6e08d9120bb15","popupWidget":true,"automaticChatOpenOnNavigation":true};
+                  {"appId":"84ab1ab38ae2269ff69d4fedd5642e0c","popupWidget":true,"automaticChatOpenOnNavigation":true};
               var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
               s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
               var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
