--- a/jobsnatch2/templates/moreinterns.html
+++ b/jobsnatch2/templates/moreinterns.html
@@ -1,4 +1,6 @@
+{% extends 'base.html'%}
 <html>
+  {% block content %}
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -11,100 +13,10 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<style>
-
-.div1{
-  text-align: center;
-}
-
-
-
-#myDiv {
-  display: none;
-  text-align: center;
-}
-
-
-
-
-.div1{
-	margin-bottom: 5em;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50em
-}
-
-h1 {
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-size: 1.8em;
-	margin-bottom: 1.5em;
-	background: url(../_images/icon_sprites_50.png) no-repeat
-}
-
-.bloghead {
-  overflow: hidden;
-  background-color: #06060698;
-  padding: 20px 10px;
-}
-
-.bloghead a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.bloghead a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.bloghead a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.bloghead a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.bloghead-right {
-  float: right;
-}
-
-@media screen and (max-width: 500px) {
-  .bloghead a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .bloghead-right {
-    float: none;
-  }
-}
-
-#contain>div {
-  width: 400px;
-  margin-top: 5%;
-  height: 400px;
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
-  background:rgba(0, 0, 0, 0.322);
-  border-radius: 5%;
-  margin-left: 4%;
-  margin-bottom: 2%;
-  
-}
 .homedi {
 width: 500px;
 margin-top: 5%;
-height: 400px;
+height: 450px;
 display: inline-block;
 *display: inline;
 zoom: 1;
@@ -119,12 +31,11 @@ margin-bottom: 2%;
         <title>Jobsnatch Internships</title>
     </head>
     <body onload="myFunction()" style="background:rgba(7, 119, 179, 0.742);; color:black;font-weight:bolder">
-      <div class="bloghead" style="width: 100%;height:15%">
-        <a class="active"  href="{% url 'index'%}" class="logo">JobSnatch</a>
-      </div>
+     
+      
       {% for x in feed %}
        {% if x.category == user.cat %}
-        <div class="container mt-3 homedi homed"  style="background-color: rgba(255, 255, 255, 0.187)">
+        <div class="container mt-3 homedi "  style="background-color: rgba(255, 255, 255, 0.187)">
           <div class="card " style="background-color: rgba(255, 255, 255, 0.644); margin-top:5%;text-align:center;font-size:20px">
             <div class="card-body">{{x.title}}</div>
           </div> 
@@ -135,6 +46,13 @@ margin-bottom: 2%;
           <div style="text-align:center;font-size:medium;">{{x.caption}}</div>
           <div style="text-align:center;font-size:medium;">Duration : {{x.durno}} {{x.durex}}</div>
           <div style="text-align:center;font-size:medium;">{{x.enddate}}</div>
+          <div style="text-align:center">
+            <form action="{% url 'interinfo' %}" method="post">
+              {% csrf_token %}
+              <input type="hidden" name="inid" value="{{x.intern_id}}">
+              <input type="submit" style="background: transparent;border:none;border-radius:10px;font-size:medium;padding:7px;color:rgb(9, 90, 119);" value="More">
+            </form>
+          </div>
           <div style="text-align:center">
             <form action="{% url 'classdetail' %}" method="post">
               {% csrf_token %}
@@ -168,5 +86,6 @@ margin-bottom: 2%;
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
      
     </body>
+    {% endblock %}
 </html>
 
