--- a/jobsnatch2/templates/company.html
+++ b/jobsnatch2/templates/company.html
@@ -347,6 +347,14 @@
                                 </div>
                               </div>
                             </div>
+                            <div class="row">
+                              <div class="col">
+                                <div class="form-group">
+                                  <label>Website URL</label>
+                                  <input class="form-control" type="text" name="wu" placeholder="www.abcd.com" value="{{user.siteurl}}">
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                         <a href="{% url 'reset_password' %}" class="forgot-pass" >Change Password</a>
